# eigyo-list-dev

./: .gitignore  CLAUDE.md  TESTING.md  run_tests.sh  基本設計書.md  要件定義書.md
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/api/: companies.py  export.py  sales.py  scraping.py
backend/app/models/: company.py  responses.py
backend/app/services/: company_service.py  google_sheets.py  scraping_engine.py
backend/tests/: fixtures.py  test_api_endpoints.py  test_business_logic.py  test_google_sheets.py  test_integration_api.py  test_performance_scraping.py  test_scraping_engine.py
docs/: TDD_TASK_MANAGEMENT.md
frontend/: .eslintrc.cjs  index.html  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/__tests__/e2e/: CriticalUserJourneys.test.tsx
frontend/src/__tests__/integration/: ErrorHandling.test.tsx  UserWorkflows.test.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/hooks/: index.ts  useCompanies.ts  useSales.ts  useScraping.ts
frontend/src/pages/: CompaniesList.tsx  CompanyDetail.tsx  Dashboard.tsx  ExportPage.tsx  SalesManagement.tsx  ScrapingPage.tsx  Settings.tsx
frontend/src/pages/__tests__/: CompaniesList.test.tsx  CompanyDetail.test.tsx  ExportPage.test.tsx  SalesManagement.test.tsx  ScrapingPage.test.tsx
frontend/src/services/: api.ts  companiesService.ts  exportService.ts  healthService.ts  index.ts  salesService.ts  scrapingService.ts
frontend/src/test/: fixtures.ts  setup.ts
frontend/src/types/: api.ts
